# ethos-ares-exprement

./: README.md  pyproject.toml
docker/: Dockerfile  requirements.txt
notebooks/: all_task_label_dump.ipynb  ed.ipynb  figures.ipynb
scripts/: run_tokenization.sh  run_training.sh
scripts/meds/: run_mimic.sh
scripts/meds/mimic/configs/: event_configs-ed.yaml
src/ethos/: metrics.py  utils.py
src/ethos/configs/: inference.yaml
src/ethos/configs/dataset/: mimic.yaml
src/ethos/datasets/: base.py  ed.py  hospital_mortality.py  mimic_icu.py  readmission.py
src/ethos/inference/: inference.py  utils.py
src/ethos/tokenize/: patterns.py  run_stage.py  run_tokenization.py
src/ethos/tokenize/mimic/: preprocessors.py
src/ethos/train/: metrics.py  run_training.py
